[gd_scene load_steps=8 format=3 uid="uid://cs6vnuiljtmct"]

[ext_resource type="Script" path="res://Logic/World.gd" id="1_i0b03"]
[ext_resource type="Script" path="res://Prototype/GameCamera.gd" id="2_1cart"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing.gd" id="3_mpog2"]
[ext_resource type="Script" path="res://Logic/MouseInput.gd" id="4_box88"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ypriw"]
sky_horizon_color = Color(0.223529, 0.517647, 0.670588, 1)
sky_curve = 0.197926
ground_bottom_color = Color(0.227451, 0.352941, 0.592157, 1)
ground_horizon_color = Color(0.286275, 0.521569, 0.290196, 1)
ground_curve = 0.937017

[sub_resource type="Sky" id="Sky_4htsq"]
sky_material = SubResource("ProceduralSkyMaterial_ypriw")

[sub_resource type="Environment" id="Environment_0glof"]
background_mode = 2
sky = SubResource("Sky_4htsq")
ambient_light_source = 3

[node name="World" type="Node3D"]
script = ExtResource("1_i0b03")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0glof")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.0146024, 0.827169, -0.561763, 0.021494, 0.561953, 0.82689, 0.999662, 3.63131e-08, -0.025985, -2.62206, 4.09464, 0)
light_energy = 1.5
shadow_enabled = true

[node name="GameCamera" type="Node3D" parent="."]
script = ExtResource("2_1cart")

[node name="AnglePivot" type="Node3D" parent="GameCamera"]
transform = Transform3D(1, 0, 0, 0, 0.866026, -0.5, 0, 0.5, 0.866026, 0, 0, 0)

[node name="ZoomPivot" type="Node3D" parent="GameCamera/AnglePivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="Smoothing" type="Node3D" parent="GameCamera/AnglePivot/ZoomPivot"]
script = ExtResource("3_mpog2")

[node name="Camera3D" type="Camera3D" parent="GameCamera/AnglePivot/ZoomPivot/Smoothing"]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, 1, 0, -1, -2.98023e-08, 0, 0, 0)

[node name="MouseRaycast" type="RayCast3D" parent="GameCamera/AnglePivot/ZoomPivot/Smoothing/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, -1, 0, 1, -2.98023e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -25, 0)
collide_with_areas = true
script = ExtResource("4_box88")
